# RGB-D-SLAM

./: CMakeLists.txt  README.md  parameters.txt
data/: result_after.g2o  result_before.g2o
include/: slamBase.h
src/: CMakeLists.txt  detectFeatures.cpp  generatePointCloud.cpp  joinPointCloud.cpp  slamBase.cpp  slamEnd.cpp  visualOdometry.cpp
